# rust_diesel

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml
data/: brazil-bookmarks.json  colombia-bookmarks.json  costa-rica-bookmarks.json  egypt-bookmarks.json  guadalajara-bookmarks.json  lisbon-bookmarks.json  mexico-bookmarks.json  milan-bookmarks.json  morocco-bookmarks.json  paris-bookmarks.json  rome-bookmarks.json  tanzania-bookmarks.json
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-09-07-205124_websites/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
