[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["chrono", "postgres"]}
chrono = "0.4"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde-xml-rs = "0.5"
texting_robots = "0.2"
reqwest = { version = "0.11", features = ["blocking"]}
